fix - Adjust for left text align

--- a/src/scss/elements/_paragraphs.scss
+++ b/src/scss/elements/_paragraphs.scss
@@ -58,7 +58,10 @@
         text-align: end;
     }
     &.tal-left {
-        text-align: end;
+        text-align: left;
+    }
+    &.tal-right {
+        text-align: left;
     }
     // Line height
     &.lh-xs {
